; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_node_metadata.c_PropagateRolesToNewNode.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_node_metadata.c_PropagateRolesToNewNode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@NIL = common dso_local global i32* null, align 8
@EnableAlterRolePropagation = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @PropagateRolesToNewNode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PropagateRolesToNewNode(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i32*, i32** @NIL, align 8
  store i32* %4, i32** %3, align 8
  %5 = load i32, i32* @EnableAlterRolePropagation, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %19

8:                                                ; preds = %1
  %9 = call i32* (...) @GenerateAlterRoleIfExistsCommandAllRoles()
  store i32* %9, i32** %3, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 (...) @CitusExtensionOwnerName()
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @SendCommandListToWorkerInSingleTransaction(i32 %12, i32 %15, i32 %16, i32* %17)
  br label %19

19:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32* @GenerateAlterRoleIfExistsCommandAllRoles(...) #1

declare dso_local i32 @SendCommandListToWorkerInSingleTransaction(i32, i32, i32, i32*) #1

declare dso_local i32 @CitusExtensionOwnerName(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
